# thermostat-py

./: .gitignore  README.md  controller.py  docker-compose.yml  example_program.json  heater.service  heater_control.py  heater_control.service  heater_control@.service  heater_poll.py  heater_program.py  install_service.sh  linter.py  main.sh  pyproject.toml  relay.py  settings.json  settings_handler.py  setup.py  stats.json  test.py  thermostat.py  util.py
archive/src/: loop.py  relay.py  settings_handler.py  thermostat_pyrebase.py  udp_sketch.ino  util.py
drafts/: get_room_temp.py  temp_from_GPIO.py
examples/: example_settings.json
src/: exceptions.py  log_handler.py  main.py  poll.py  program.py  relay.py  settings_handler.py  test_themometer.py  thermometer.py  util.py
src/server/: test_ws.py
src/server/app/: main.py
src/thermostat/: main.py  thermometer.py
src/thermostat_py/: configurations_manager.py  main.py  managers.py  sockets_b.py
src/thermostat_py/sockets/: __init__.py  validators.py
src/thermostat_py/thermometers/: __init__.py  validators.py
tests/: test_sockets.py  test_thermometers.py
